Updated RecordService, RecordController, ExceptionHandler, added helper classes and unit tests